--- a/BLAZAM/BLAZAM.csproj
+++ b/BLAZAM/BLAZAM.csproj
@@ -6,7 +6,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<ServerGarbageCollection>false</ServerGarbageCollection>
 		<AssemblyVersion>0.7.5</AssemblyVersion>
-		<Version>2023.04.22.2028</Version>
+		<Version>2023.04.23.2107</Version>
 		<RootNamespace>BLAZAM</RootNamespace>
 		<GenerateDocumentationFile>False</GenerateDocumentationFile>
 
@@ -80,6 +80,7 @@
 
 	<ItemGroup>
 	  <None Include="..\BLAZAMGui\Layouts\UserNotificationPopover.razor" Link="UserNotificationPopover.razor" />
+	  <None Include="..\BLAZAMGui\UI\Settings\Templates\AssignedTemplateGroup.razor" Link="AssignedTemplateGroup.razor" />
 	</ItemGroup>
 
 	<ItemGroup>
