Remove Db files from git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,5 @@ FodyWeavers.xsd
 /BLAZAM/Writable/Security/TokenKey.key
 /BLAZAM/appsettings.json
 /Setup/BLAZAM.msi
+/BLAZAM/database - Copy.db
+/BLAZAM/database.db
