--- a/BLAZAM/BLAZAM.csproj
+++ b/BLAZAM/BLAZAM.csproj
@@ -6,13 +6,14 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<ServerGarbageCollection>false</ServerGarbageCollection>
 		<AssemblyVersion>0.8.2</AssemblyVersion>
-		<Version>2023.05.06.1934</Version>
+		<Version>2023.05.07.1723</Version>
 		<RootNamespace>BLAZAM</RootNamespace>
 		<GenerateDocumentationFile>False</GenerateDocumentationFile>
 
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Remove="appsettings.json.example" />
 	  <None Remove="nssm.exe" />
 	  <None Remove="static\img\default_logo.png" />
 	  <None Remove="static\img\default_logo2.png" />
@@ -23,6 +24,9 @@
 
 
 	<ItemGroup>
+	  <Content Include="appsettings.json.example">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
 	  <Content Include="nssm.exe">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Content>
