--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
       - name: Build application
-        run: dotnet publish -c Release -o bin\Publish
+        run: dotnet publish -c Release -o bin\Publish BLAZAM/BLAZAM.csproj
       - name: Set assembly version as environment variable
         shell: pwsh
         id: get_version
