--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
       - name: Build application
-        run: dotnet publish -c Release -o bin/publish
+        run: dotnet publish -c Release -o bin/publish BLAZAM/BLAZAM.csproj
       - name: Test application
         run: dotnet test -c Release
 
