--- a/BLAZAM/appsettings.example.json
+++ b/BLAZAM/appsettings.example.json
@@ -14,11 +14,13 @@
   "HTTPPort": "79",
   "HTTPSPort": "442",
   "AllowedHosts": "*",
-  "DatabaseType": "SQLite",
+  "DatabaseType": "SQLite", //SQL,SQLite,or MySQL
   "ConnectionStrings": {
-    "SQLConnectionString": "Data Source=localhost;Database=BLAZAM;Persist Security Info=True;Integrated Security=False;Connection Timeout=10;TrustServerCertificate=True;",
-    "SQLiteConnectionString": "Data Source=%temp%/Blazam/database.db;",
-    "MySQLConnectionString": "Server=localhost;User=blazam;Password=blazam;Database=blazam;"
+
+    "DBConnectionString": ""
+    //SQL Example "ConnectionString": "Data Source=localhost;Database=BLAZAM;Persist Security Info=True;Integrated Security=False;Connection Timeout=10;TrustServerCertificate=True;",
+    //SQLite Example "ConnectionString": "Data Source=%temp%/Blazam/database.db;",
+    //MySql Example "ConnectionString": "Server=localhost;User=blazam;Password=blazam;Database=blazam;"
   }
 
 }
