--- a/BLAZAMFileSystem/BLAZAMFileSystem.csproj
+++ b/BLAZAMFileSystem/BLAZAMFileSystem.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Serilog" Version="2.12.0" />
+    <PackageReference Include="System.Security.Permissions" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
