--- a/BLAZAMLoggers/BLAZAMLogger.csproj
+++ b/BLAZAMLoggers/BLAZAMLogger.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
+    <PackageReference Include="Serilog.Enrichers.Environment" Version="2.2.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="5.2.2" />
   </ItemGroup>
