--- a/BLAZAMGui/BLAZAMGui.csproj
+++ b/BLAZAMGui/BLAZAMGui.csproj
@@ -42,6 +42,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="UI\Chat\EntrySpecificChat.razor">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
     <Content Update="UI\FlexContainer.razor">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </Content>
