--- a/BLAZAM/BLAZAM.csproj
+++ b/BLAZAM/BLAZAM.csproj
@@ -6,7 +6,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<ServerGarbageCollection>false</ServerGarbageCollection>
 		<AssemblyVersion>0.8.5</AssemblyVersion>
-		<Version>2023.11.24.2007</Version>
+		<Version>2023.11.25.1718</Version>
 
 		<RootNamespace>BLAZAM</RootNamespace>
 		<GenerateDocumentationFile>False</GenerateDocumentationFile>
@@ -102,6 +102,7 @@
 	  <ProjectReference Include="..\BLAZAMEmail\BLAZAMEmail.csproj" />
 	  <ProjectReference Include="..\BLAZAMFileSystem\BLAZAMFileSystem.csproj" />
 	  <ProjectReference Include="..\BLAZAMGui\BLAZAMGui.csproj" />
+	  <ProjectReference Include="..\BLAZAMJobs\BLAZAMJobs.csproj" />
 	  <ProjectReference Include="..\BLAZAMLocalization\BLAZAMLocalization.csproj" />
 	  <ProjectReference Include="..\BLAZAMLoggers\BLAZAMLogger.csproj" />
 	  <ProjectReference Include="..\BLAZAMNotifications\BLAZAMNotifications.csproj" />
