--- a/BLAZAMJobs/BLAZAMJobs.csproj
+++ b/BLAZAMJobs/BLAZAMJobs.csproj
@@ -1,20 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <RootNamespace>BLAZAM.ActiveDirectory</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Management" Version="8.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\BLAZAMDatabase\BLAZAMDatabase.csproj" />
-    <ProjectReference Include="..\BLAZAMJobs\BLAZAMJobs.csproj" />
-    <ProjectReference Include="..\BLAZAMNotifications\BLAZAMNotifications.csproj" />
     <ProjectReference Include="..\BLAZAMSession\BLAZAMSession.csproj" />
   </ItemGroup>
 
