--- a/BLAZAMActiveDirectory/BLAZAMActiveDirectory.csproj
+++ b/BLAZAMActiveDirectory/BLAZAMActiveDirectory.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\BLAZAMDatabase\BLAZAMDatabase.csproj" />
     <ProjectReference Include="..\BLAZAMJobs\BLAZAMJobs.csproj" />
+    <ProjectReference Include="..\BLAZAMLocalization\BLAZAMLocalization.csproj" />
     <ProjectReference Include="..\BLAZAMNotifications\BLAZAMNotifications.csproj" />
     <ProjectReference Include="..\BLAZAMSession\BLAZAMSession.csproj" />
   </ItemGroup>
