--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -22,10 +22,14 @@ jobs:
           key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
           restore-keys: |
             ${{ runner.os }}-nuget-
-      - name: Setup .NET Core SDK
+      - name: Setup .NET Core SDK 6
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 6.x
+      - name: Setup .NET Core SDK 8
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 8.x
       - name: Restore dependencies
         run: dotnet restore
       - name: Build application
