--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -32,15 +32,19 @@ jobs:
           dotnet-version: 8.x
       - name: Restore dependencies
         run: dotnet restore
-     
-      - name: Build application
+      - name: Build application (Debug)
         run: dotnet publish -c Release -o bin/publish BLAZAM/BLAZAM.csproj
+      
       - name: Setup Playwright
         shell: pwsh
         run: |
           bin/Debug/net8.0/playwright.ps1 install; 
       - name: Test application
         run: dotnet test -c Release
+
+      - name: Build application (Release)
+        run: dotnet publish -c Release -o bin/publish BLAZAM/BLAZAM.csproj
+      
 
       - name: Set assembly version as environment variable
         shell: pwsh
