--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Build application (Debug)
         run: dotnet build -c Debug
       - name: Show Current Directory
-        run: dir /w
+        run: dir
       - name: Setup Playwright
         shell: pwsh
         run: |
