--- a/BLAZAMServices/BLAZAMServices.csproj
+++ b/BLAZAMServices/BLAZAMServices.csproj
@@ -18,6 +18,7 @@
     <ProjectReference Include="..\BLAZAMActiveDirectory\BLAZAMActiveDirectory.csproj" />
     <ProjectReference Include="..\BLAZAMCommon\BLAZAMCommon.csproj" />
     <ProjectReference Include="..\BLAZAMDatabase\BLAZAMDatabase.csproj" />
+    <ProjectReference Include="..\BLAZAMNav\BLAZAMNav.csproj" />
   </ItemGroup>
 
 </Project>
