Update Nightly and stable workflows

--- a/.github/workflows/build-nightly.yml
+++ b/.github/workflows/build-nightly.yml
@@ -22,17 +22,27 @@ jobs:
           key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
           restore-keys: |
             ${{ runner.os }}-nuget-
-      - name: Setup .NET Core SDK
+      - name: Setup .NET Core SDK 6
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 6.x
+      - name: Setup .NET Core SDK 8
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 8.x
       - name: Restore dependencies
         run: dotnet restore
-      - name: Build application
-        run: dotnet publish -c Release -o bin/publish BLAZAM/BLAZAM.csproj
+      - name: Build application (Debug)
+        run: dotnet build -c Debug
+      - name: Setup Playwright
+        shell: pwsh
+        run: |
+          PlaywrightTests/bin/Debug/net8.0/playwright.ps1 install; 
+          
       - name: Test application
         run: dotnet test -c Release
-
+      - name: Build application (Release)
+        run: dotnet publish -c Release -o bin/publish BLAZAM/BLAZAM.csproj
       - name: Set assembly version as environment variable
         shell: pwsh
         id: get_version
