--- a/BLAZAMGui/BLAZAMGui.csproj
+++ b/BLAZAMGui/BLAZAMGui.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="8.0.1" />
     <PackageReference Include="MudBlazor" Version="6.14.0" />
     <PackageReference Include="MudBlazor.Markdown" Version="0.1.3" />
+    <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="8.0.0" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.1" />
   </ItemGroup>
 
