--- a/BLAZAM/BLAZAM.csproj
+++ b/BLAZAM/BLAZAM.csproj
@@ -6,7 +6,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<ServerGarbageCollection>false</ServerGarbageCollection>
 		<AssemblyVersion>0.8.9</AssemblyVersion>
-		<Version>2024.02.21.0139</Version>
+		<Version>2024.02.24.0054</Version>
 		<IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
 		<RootNamespace>BLAZAM</RootNamespace>
 		<GenerateDocumentationFile>False</GenerateDocumentationFile>
@@ -55,6 +55,7 @@
 
 
 	<ItemGroup>
+	  <None Include="..\BLAZAMGui\UI\Modals\AuditEntryChanges.razor" Link="AuditEntryChanges.razor" />
 	  <None Include="..\BLAZAMGui\UI\Settings\ProcessCPUUsage.razor" Link="ProcessCPUUsage.razor" />
 	</ItemGroup>
 
