--- a/BLAZAMSession/BLAZAMSession.csproj
+++ b/BLAZAMSession/BLAZAMSession.csproj
@@ -13,4 +13,10 @@
     <ProjectReference Include="..\BLAZAMNotifications\BLAZAMNotifications.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="ApplicationNews">
+      <HintPath>ApplicationNews.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
