--- a/BLAZAM/BLAZAM.csproj
+++ b/BLAZAM/BLAZAM.csproj
@@ -6,7 +6,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<ServerGarbageCollection>false</ServerGarbageCollection>
 		<AssemblyVersion>0.8.9</AssemblyVersion>
-		<Version>2024.03.15.1259</Version>
+		<Version>2024.03.16.2158</Version>
 		<IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
 		<RootNamespace>BLAZAM</RootNamespace>
 		<GenerateDocumentationFile>False</GenerateDocumentationFile>
@@ -26,6 +26,10 @@
 		<None Remove="static\img\default_logo2.png" />
 		<None Remove="static\img\default_logo3.png" />
 		<None Remove="static\img\default_logo4.png" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Include="..\BLAZAMGui\UI\DirectoryModelComponent.razor.cs" Link="DirectoryModelComponent.razor.cs" />
 	</ItemGroup>
 
 	
