--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -70,8 +70,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         with:
-          tag_name: v1Dev
-          name: 'v1Dev'
+          tag_name: Dev
+          name: 'Dev'
           prerelease: true
           body: This release is highly unstable. Expect bugs and crashes on this branch. Developers Only!
           files: |
