--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -71,7 +71,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         with:
           tag_name: Dev
-          name: 'Dev'
+          name: 'v1-Dev'
           prerelease: true
           body: This release is highly unstable. Expect bugs and crashes on this branch. Developers Only!
           files: |
