--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -72,7 +72,7 @@ jobs:
         with:
           tag_name: 'Dev1'
           name: 'Dev1'
-          prerelease: false
+          prerelease: true
           body: This release is highly unstable. Expect bugs and crashes on this branch. Developers Only!
           files: |
             ./blazam-dev-v${{ env.ASSEMBLY_VERSION }}.zip
