Branch shift for v1.0

--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - Beta-Stable
+      - v1-Stable
     
 
 jobs:
@@ -15,10 +15,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Setup .NET Core SDK 6
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 6.x
       - name: Setup .NET Core SDK 8
         uses: actions/setup-dotnet@v1
         with:
@@ -55,8 +51,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         
         with:
-          tag_name: Stable-v${{ env.ASSEMBLY_VERSION }}
-          release_name: Stable - v${{ env.ASSEMBLY_VERSION }}
+          tag_name: Release-v${{ env.ASSEMBLY_VERSION }}
+          release_name: Release - v${{ env.ASSEMBLY_VERSION }}
           body: ""
           draft: true
           prerelease: true
