Try different token

--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Update dev release
         uses: andelf/nightly-release@main
         env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: Dev
           name: 'Dev'
