--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-   
+    permissions: write-all
         
     steps:
       - name: Checkout code
