Switch to AutoGen GitHub Token

--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   build:
     runs-on: windows-latest
+    permissions: write-all
    
         
     steps:
@@ -68,7 +69,7 @@ jobs:
       - name: Update dev release
         uses: andelf/nightly-release@main
         env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: 'Dev1'
           name: 'Dev1'
