Prepare for Email Notification Subscriptions

--- a/BLAZAMNotifications/BLAZAMNotifications.csproj
+++ b/BLAZAMNotifications/BLAZAMNotifications.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BLAZAMDatabase\BLAZAMDatabase.csproj" />
+    <ProjectReference Include="..\BLAZAMEmailMessage\BLAZAMEmailMessage.csproj" />
   </ItemGroup>
 
 </Project>
