Job Monitor Addeed

--- a/BLAZAM/BLAZAM.csproj
+++ b/BLAZAM/BLAZAM.csproj
@@ -6,7 +6,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<ServerGarbageCollection>false</ServerGarbageCollection>
 		<AssemblyVersion>0.9.4</AssemblyVersion>
-		<Version>2024.07.21.1741</Version>
+		<Version>2024.07.21.2146</Version>
 		<IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
 		<RootNamespace>BLAZAM</RootNamespace>
 		<GenerateDocumentationFile>False</GenerateDocumentationFile>
@@ -116,6 +116,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Include="..\BLAZAMGui\UI\Settings\JobsMonitor.razor" Link="JobsMonitor.razor" />
 	  <None Include="..\BLAZAMGui\UI\Settings\Notifications\EditNotificationSubscriptionRow.razor" Link="EditNotificationSubscriptionRow.razor" />
 	</ItemGroup>
 
