Implement Email Notifications

--- a/BLAZAMEmail/BLAZAMEmail.csproj
+++ b/BLAZAMEmail/BLAZAMEmail.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\BLAZAMEmailMessage\BLAZAMEmailMessage.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
