--- a/BLAZAM/BLAZAM.csproj
+++ b/BLAZAM/BLAZAM.csproj
@@ -77,13 +77,14 @@
 		<PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.7" />
 		<PackageReference Include="Microsoft.Extensions.Logging.EventLog" Version="8.0.0" />
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.3" />
+		<PackageReference Include="MudBlazor" Version="7.4.0" />
 		<PackageReference Include="MudBlazor.Markdown" Version="1.0.2" />
 		<PackageReference Include="MudBlazor.ThemeManager" Version="2.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Octokit" Version="13.0.1" />
 		<PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
 		<PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
-		<PackageReference Include="SixLabors.ImageSharp.Web" Version="3.1.2" />
+		<PackageReference Include="SixLabors.ImageSharp.Web" Version="3.1.3" />
 		<PackageReference Include="System.DirectoryServices" Version="8.0.0" />
 
 		<PackageReference Include="System.DirectoryServices.AccountManagement" Version="8.0.0" />
