--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -63,7 +63,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: 'v1-Dev'
+          tag_name: 'Dev1'
           name: 'v1-Dev'
           prerelease: true
           body: This release is highly unstable. Expect bugs and crashes on this branch. Developers Only!
