--- a/.github/release.yml
+++ b/.github/release.yml
@@ -16,6 +16,9 @@ changelog:
     - title: Exciting New Features 🎉
       labels:
         - enhancement
+    - title: Security Updates 🔐
+      labels:
+        - security
     - title: Fixes 🏗
       labels:
         - bug
